--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,9 +24,10 @@ body {
 /* End of body */
 
 /* Start of header class and tags */
-.flex-row h2 {
+.flex-row {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     /* justify-content: space-between; */
     justify-content: center;
     margin-top: 50px;
