--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,7 @@ header a {
     display: flex;
     flex-wrap: wrap;
     padding: 40px;
+    border-right: solid 1px white;
 }
 
 .hero-cta div{
@@ -112,13 +113,11 @@ header a {
     padding: 100px 328px;
     background-color: gray;
     color: chocolate;
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    position: sticky;
-    align-items: flex-start;
-    align-content: space-around;
-    flex-direction: row; */
+}
+
+.hero-cta img {
+    width: 100%;
+    height: 300px;
 }
 
 .hero div p {
@@ -142,6 +141,24 @@ article div p {
     padding-right: 12px;
     padding-top: 20px;
     padding-bottom: 10px;
+}
+
+.box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.box div {
+    flex: 1 0 0;
+    width: 800px;
+    height: 400px;
+}
+
+.pictures {
+    flex: 1 0 0;
+    width: 300px;
+    height: 300px;
 }
 
 /* section div {
