--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
 /* End of body */
 
 /* Start of header class and tags */
+
 .flex-row {
     display: flex;
     flex-direction: row;
@@ -36,7 +37,8 @@ header {
     padding: 20px 35px;
     background-color: black;
     color: chocolate;
-    display: flex;
+    /* display: flex; */
+    display: block;
     flex-wrap: wrap;
     justify-content: space-between;
     position: -webkit-sticky;
@@ -44,15 +46,20 @@ header {
 }
 
 header h1 {
-    display: inline-block;
+    /* display: inline-block;
     font-size: 36px;
     padding: 3px;
     width: 50px;
-    height: 50px;
+    height: 50px; */
+    display: inline-block;
+    font-size: 36px;
+    padding: 5px;
+    width: 130px;
+    height: 30px;
 }
 
 header nav {
-    float: right top;
+    float: right;
     margin: 17px 0;
     padding: 15px 10px;
     position: relative;
@@ -79,6 +86,13 @@ header nav ul li {
 
 header nav ul li a {
     font-size: xx-large;
+}
+
+.avatar {
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+    margin-top: 0.8%;
 }
 
 header a {
