--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,14 @@
     --black: #2d3436;
     --chocolate: #e17055;
     --blue: #0984e3; 
-    --gray: #636e72; 
+    /* --gray: #636e72;  */
     --yellow: #ffeaa7;
+    --greenyellow: #adff2f;
+    --gray: #808080;
+    --white: #FFFFFF;
+    --lightsalmon: #ffa07a;
+    --khaki: #F0E68C;
+    --darkgoldenrod: #b8860b;
     --gill_sans: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -28,8 +34,8 @@ body {
 
 header {
     padding: 52px 25px;
-    background-color: black;
-    color: chocolate;
+    background-color: var(--black);
+    color: var(--chocolate);
     display: block;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -42,7 +48,7 @@ header a {
     padding-right: 10px;
     padding-bottom: 5px;
     text-decoration: none;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid var(--white);
 }
 
 header h1 {
@@ -77,7 +83,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-    font-size: large;
+    font-size: xx-large;
 }
 
 .avatar {
@@ -97,7 +103,7 @@ header nav ul li a {
     display: flex;
     flex-wrap: wrap;
     padding: 40px;
-    border-right: solid 1px white;
+    border-right: solid 1px var(--white);
 }
 
 .hero-cta div{
@@ -107,10 +113,10 @@ header nav ul li a {
 .hero-cta h2 {
     font-size: 36px;
     text-decoration: none;
-    border-bottom: 5px solid white;
+    border-bottom: 5px solid var(--white);
     padding: 100px 328px;
-    background-color: gray;
-    color: chocolate;
+    background-color: var(--gray);
+    color: var(--chocolate);
 }
 
 .hero-cta img {
@@ -166,13 +172,13 @@ article div p {
 }
 
 .contact a:link {
-    color: greenyellow;
+    color: var(--greenyellow);
     text-decoration: none;
 }
 
 .contact a:hover {
-    color: lightsalmon;
-    text-decoration:khaki;
+    color: var(--lightsalmon);
+    text-decoration:var(--khaki);
 }
 
 .pictures {
@@ -208,7 +214,7 @@ article div p {
 
 /* Footer styles starts */
 footer {
-    background:darkgoldenrod;
+    background:var(--darkgoldenrod);
     width: 100%;
     padding: 2px 8px;
     display: flex;
@@ -217,7 +223,7 @@ footer {
 }
 
 footer h2 {
-    color: black;
+    color: var(--black);
     font-size: 30px;
     margin: 0;
 }
@@ -228,7 +234,7 @@ footer div {
 }
 
 footer a {
-    color: green;
+    color: var(--greenyellow);
 }
 /* Footer styles Ends */
 
